--- a/hotnews/index.html
+++ b/hotnews/index.html
@@ -96,6 +96,8 @@
       transform:translateY(-2px);
       box-shadow:0 6px 14px rgba(59,130,246,.4);
     }
+    .btn.loading{opacity:.8;pointer-events:none;filter:saturate(.8)}
+    .btn.playing{background:linear-gradient(135deg,var(--success),#059669);box-shadow:0 6px 14px rgba(16,185,129,.45)}
     .triCard{
       background:linear-gradient(145deg,rgba(15,23,39,.9),rgba(26,36,58,.9));
       border:1px solid rgba(59,130,246,.25);
@@ -189,21 +191,96 @@
 
 <script>
 const AZURE_TTS_BASE='https://web-x0ya.onrender.com';
+let currentAudio=null;
+let currentAudioUrl=null;
+let playbackToken=0;
+let activeBtn=null;
 
-async function speakAzure(text){
+function setBtnState(btn,state){
+  if(!btn) return;
+  btn.classList.remove('loading','playing');
+  if(state) btn.classList.add(state);
+}
+function clearActiveBtn(){
+  if(activeBtn){
+    setBtnState(activeBtn,null);
+    activeBtn=null;
+  }
+}
+function stopAllAudio(){
+  playbackToken++; // 使所有旧请求失效
+  clearActiveBtn();
+  try{ if('speechSynthesis' in window) window.speechSynthesis.cancel(); }catch(_e){}
+  try{
+    if(currentAudio){
+      currentAudio.pause();
+      currentAudio.currentTime=0;
+      currentAudio=null;
+    }
+    if(currentAudioUrl){
+      URL.revokeObjectURL(currentAudioUrl);
+      currentAudioUrl=null;
+    }
+  }catch(_e){}
+}
+function beginPlayback(btn){
+  stopAllAudio();
+  const token=playbackToken;
+  activeBtn=btn||null;
+  setBtnState(activeBtn,'loading');
+  return token;
+}
+
+async function speakAzure(text,token){
   const q=encodeURIComponent(text); const voice=encodeURIComponent('en-US-JennyNeural');
   const r=await fetch(`${AZURE_TTS_BASE}/tts?text=${q}&voice=${voice}`); if(!r.ok) throw new Error('tts '+r.status);
   const b=await r.blob(); if(!b||b.size<1024) throw new Error('empty audio');
-  const a=new Audio(URL.createObjectURL(b)); await a.play();
+
+  if(token!==playbackToken){ clearActiveBtn(); return false; }
+
+  const url=URL.createObjectURL(b);
+  const audio=new Audio(url);
+
+  if(token!==playbackToken){ URL.revokeObjectURL(url); clearActiveBtn(); return false; }
+
+  currentAudioUrl=url;
+  currentAudio=audio;
+  setBtnState(activeBtn,'playing');
+
+  audio.onended=()=>{
+    if(currentAudio===audio){ currentAudio=null; }
+    if(currentAudioUrl===url){ URL.revokeObjectURL(url); currentAudioUrl=null; }
+    clearActiveBtn();
+  };
+
+  await audio.play();
+  return true;
 }
-function speakFallback(text){ if(!('speechSynthesis' in window)) return; const u=new SpeechSynthesisUtterance(text); u.lang='en-US'; window.speechSynthesis.speak(u); }
-window.readItem=async (zh,en)=>{const t=`Chinese: ${zh}. English: ${en}.`; try{await speakAzure(t)}catch(e){speakFallback(t)}}
-window.readEnglish=async (en)=>{const t=`${en}`; try{await speakAzure(t)}catch(e){speakFallback(t)}}
-window.readChinese=async (zh)=>{const t=`${zh}`; try{await speakAzure(t)}catch(e){speakFallback(t)}}
+function speakFallback(text,token){
+  if(token!==playbackToken) return;
+  setBtnState(activeBtn,'playing');
+  if(!('speechSynthesis' in window)) { clearActiveBtn(); return; }
+  const u=new SpeechSynthesisUtterance(text);
+  u.lang='en-US';
+  u.onend=()=>clearActiveBtn();
+  window.speechSynthesis.speak(u);
+}
+async function playText(text,btn){
+  const token=beginPlayback(btn);
+  try{
+    await speakAzure(text,token);
+  }catch(_e){
+    // 仅当前点击仍是最新播放时才允许fallback，避免旧请求打断新播放
+    speakFallback(text,token);
+  }
+}
+window.readItem=async (zh,en,btn)=>{const t=`Chinese: ${zh}. English: ${en}.`; await playText(t,btn)}
+window.readEnglish=async (en,btn)=>{const t=`${en}`; await playText(t,btn)}
+window.readChinese=async (zh,btn)=>{const t=`${zh}`; await playText(t,btn)}
 
 function newsItem(it){
   const zh=it.title_zh||it.title||''; const en=it.title_en||it.title||'';
-  return `<div class="item"><div class="zh"><a href="${it.link}" target="_blank" rel="noreferrer">${zh}</a></div><div class="en">${en}</div><div class="toolbar"><button class="btn" onclick="readItem(${JSON.stringify(zh).replace(/"/g,'&quot;')},${JSON.stringify(en).replace(/"/g,'&quot;')})">🔊 读ZH/EN</button><button class="btn" onclick="readEnglish(${JSON.stringify(en).replace(/"/g,'&quot;')})">🗣 EN</button></div></div>`;
+  return `<div class="item"><div class="zh"><a href="${it.link}" target="_blank" rel="noreferrer">${zh}</a></div><div class="en">${en}</div><div class="toolbar"><button class="btn" onclick="readItem(${JSON.stringify(zh).replace(/"/g,'&quot;')},${JSON.stringify(en).replace(/"/g,'&quot;')},this)">🔊 读ZH/EN</button><button class="btn" onclick="readEnglish(${JSON.stringify(en).replace(/"/g,'&quot;')},this)">🗣 EN</button></div></div>`;
 }
 
 function triCol(title,item){
@@ -215,10 +292,11 @@ function triCol(title,item){
     const shortDesc=desc.length>150?desc.substring(0,147)+'...':desc;
     descHtml=`<div class="desc" style="margin-top:10px;font-size:12px;color:#94a3b8;line-height:1.4;padding:8px;background:rgba(0,0,0,.1);border-radius:6px;border-left:2px solid #475569">${shortDesc}</div>`;
   }
-  return `<div class="col"><h4>${title}</h4><div class="zh"><a href="${item.link}" target="_blank">${zh}</a></div><div class="en">${en}</div>${descHtml}<div class="toolbar"><button class="btn" onclick="readEnglish(${JSON.stringify(en).replace(/"/g,'&quot;')})">🗣 Read EN</button></div></div>`;
+  return `<div class="col"><h4>${title}</h4><div class="zh"><a href="${item.link}" target="_blank">${zh}</a></div><div class="en">${en}</div>${descHtml}<div class="toolbar"><button class="btn" onclick="readEnglish(${JSON.stringify(en).replace(/"/g,'&quot;')},this)">🗣 Read EN</button></div></div>`;
 }
 
 function switchTab(name){
+  stopAllAudio(); // 切换栏目时停止当前播放
   document.querySelectorAll('.tab').forEach(t=>t.classList.toggle('active',t.dataset.tab===name));
   document.querySelectorAll('.panel').forEach(p=>p.classList.remove('active'));
   document.getElementById('panel-'+name).classList.add('active');
@@ -238,7 +316,7 @@ async function load(){
   const tri=(d.triangle||[]).map((e,i)=>`
     <div class="triCard">
       <div class="event">事件 ${i+1}：${e.event_hint_zh||e.event_hint||''}<span class="en">${e.event_hint_en||e.event_hint||''}</span></div>
-      <div class="toolbar"><button class="btn" onclick="readEnglish(${JSON.stringify((e.event_hint_en||e.event_hint||'')).replace(/"/g,'&quot;')})">🗣 Event EN</button></div>
+      <div class="toolbar"><button class="btn" onclick="readEnglish(${JSON.stringify((e.event_hint_en||e.event_hint||'')).replace(/"/g,'&quot;')},this)">🗣 Event EN</button></div>
       <div class="triGrid">
         ${triCol('中国视角 / China',e['中国'])}
         ${triCol('欧美视角 / Western',e['美国'])}
@@ -247,8 +325,8 @@ async function load(){
       <div class="insight">
         <div style="display:flex;align-items:center;gap:10px;margin-bottom:12px">
           <b style="font-size:16px;color:#f0f9ff">深度分析</b>
-          <button class="btn" style="padding:6px 12px;font-size:12px" onclick="readChinese(${JSON.stringify((e.my_view||'')).replace(/"/g,'&quot;')})">🔊 读分析</button>
-          <button class="btn" style="padding:6px 12px;font-size:12px" onclick="readChinese(${JSON.stringify((e.summary||'')).replace(/"/g,'&quot;')})">🔊 读总结</button>
+          <button class="btn" style="padding:6px 12px;font-size:12px" onclick="readChinese(${JSON.stringify((e.my_view||'')).replace(/"/g,'&quot;')},this)">🔊 读分析</button>
+          <button class="btn" style="padding:6px 12px;font-size:12px" onclick="readChinese(${JSON.stringify((e.summary||'')).replace(/"/g,'&quot;')},this)">🔊 读总结</button>
         </div>
         <div style="margin-bottom:16px">
           <div style="display:flex;align-items:center;gap:8px;margin-bottom:8px">
@@ -267,6 +345,9 @@ async function load(){
   `).join('');
   document.getElementById('list-tri').innerHTML=tri||'<div class="item">暂无可对比事件</div>';
 }
+
+document.addEventListener('visibilitychange',()=>{ if(document.hidden) stopAllAudio(); });
+window.addEventListener('beforeunload',stopAllAudio);
 
 load().catch(e=>document.getElementById('meta').textContent='加载失败 / Load failed: '+e.message);
 </script>
