每日词汇更新: 2026-02-24 - bureaucracy, sanction, parliament, implementation, recession, coalition, tariff, oversight, innovation, deficit

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<!-- 每日词汇更新 2026-02-24 08:04:10 -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>雅思每日10词 - Azure TTS专业发音</title>
@@ -65,7 +66,7 @@
   </div>
 
   <div style="margin:20px 0">
-    <div id="today-date" style="text-align:center;color:#94a3b8;font-size:16px"></div>
+    <div id="today-date" style="text-align:center;color:#94a3b8;font-size:16px">今日日期：2026-02-24（10个）• 🤖 微软Azure神经网络TTS • 更新时间: 08:04:10</div>
     <div class="progress-bar">
       <div class="progress-fill" id="progress" style="width:0%"></div>
     </div>
