--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<!-- 每日词汇更新 2026-02-25 08:01:02 -->
 <!-- 每日词汇更新 2026-02-24 08:04:10 -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
