Mark version 1.0.0 with version control comments

--- a/pronunciation_helper.html
+++ b/pronunciation_helper.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
+<!-- 
+============================================================
+Pronunciation Helper - Version 1.0.0
+============================================================
+版本状态: 基准版本 (用户指定)
+创建时间: 2026-02-26
+Git提交: 2398051a26b3fe622d2bb255e5ae10134e7de934
+线上地址: https://gosleep2018.github.io/web/pronunciation_helper.html
+
+版本控制规则:
+1. 此版本标记为v1.0.0基准版本
+2. 任何修改必须获得用户明确确认
+3. 修改前需创建备份副本
+4. 详细信息见: VERSION_CONTROL.md
+
+注意: 此版本使用浏览器Web Speech API，威尔士语发音可能受限。
+专业威尔士语发音请使用: welsh_azure_tts.html (Azure TTS)
+============================================================
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
