--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<!-- 每日词汇更新 2026-03-02 08:00:44 -->
 <!-- 每日词汇更新 2026-03-01 08:00:50 -->
 <!-- 每日词汇更新 2026-02-28 08:00:42 -->
   <meta charset="UTF-8">
